--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "collaborators": [
     "Em Zhan <zqianem@gmail.com>"
   ],
+  "license": "MIT",
   "version": "0.1.0",
   "files": [
     "Cargo.toml",
