Fix wasm-opt build
https://github.com/rustwasm/wasm-pack/issues/886#issuecomment-667669802

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,6 @@ crate-type = ["cdylib"]
 [dependencies]
 wasm-bindgen = "0.2.63"
 sciolyff = { git = "https://github.com/unosmium/sciolyff-rust" }
+
+[package.metadata.wasm-pack.profile.release]
+wasm-opt = ["-Oz", "--enable-mutable-globals"]
